exports[`App component renders correctly when the pathname does not match a route 1`] = `
<NavigationDrawer
  autoclose={true}
  contentComponent="main"
  contentId="main-content"
  defaultMedia="mobile"
  desktopDrawerType="full-height"
  desktopMinWidth={1025}
  drawerTransitionDuration={300}
  extractMini={true}
  header={<div />}
  includeDrawerHeader={true}
  jumpLabel="Jump to content"
  mobileDrawerType="temporary"
  mobileMinWidth={320}
  navItems={
    Array [
      Object {
        "component": [Function],
        "key": "inbox",
        "leftIcon": <FontIcon
          iconClassName="material-icons">
          inbox
    </FontIcon>,
        "primaryText": "Inbox",
        "to": "/inbox",
      },
      Object {
        "component": [Function],
        "key": "projects",
        "leftIcon": <FontIcon
          iconClassName="material-icons">
          assignment
    </FontIcon>,
        "primaryText": "Projects",
        "to": "/projects",
      },
      Object {
        "component": [Function],
        "key": "account",
        "leftIcon": <FontIcon
          iconClassName="material-icons">
          person
    </FontIcon>,
        "primaryText": "Account",
        "to": "/account",
      },
    ]
  }
  persistentIconChildren="arrow_back"
  position="left"
  tabletDrawerType="full-height"
  tabletMinWidth={768}
  temporaryIconChildren="menu"
  toolbarThemeType="colored"
  toolbarTitle="Oak"
  transitionEnterTimeout={300}
  transitionName="md-cross-fade">
  <div />
</NavigationDrawer>
`;

exports[`App component renders correctly when the pathname matches a route 1`] = `
<NavigationDrawer
  autoclose={true}
  contentComponent="main"
  contentId="main-content"
  defaultMedia="mobile"
  desktopDrawerType="full-height"
  desktopMinWidth={1025}
  drawerTransitionDuration={300}
  extractMini={true}
  header={<div />}
  includeDrawerHeader={true}
  jumpLabel="Jump to content"
  mobileDrawerType="temporary"
  mobileMinWidth={320}
  navItems={
    Array [
      Object {
        "active": true,
        "component": [Function],
        "key": "inbox",
        "leftIcon": <FontIcon
          iconClassName="material-icons">
          inbox
    </FontIcon>,
        "primaryText": "Inbox",
        "to": "/inbox",
      },
      Object {
        "component": [Function],
        "key": "projects",
        "leftIcon": <FontIcon
          iconClassName="material-icons">
          assignment
    </FontIcon>,
        "primaryText": "Projects",
        "to": "/projects",
      },
      Object {
        "component": [Function],
        "key": "account",
        "leftIcon": <FontIcon
          iconClassName="material-icons">
          person
    </FontIcon>,
        "primaryText": "Account",
        "to": "/account",
      },
    ]
  }
  persistentIconChildren="arrow_back"
  position="left"
  tabletDrawerType="full-height"
  tabletMinWidth={768}
  temporaryIconChildren="menu"
  toolbarThemeType="colored"
  toolbarTitle="Oak"
  transitionEnterTimeout={300}
  transitionName="md-cross-fade">
  <div />
</NavigationDrawer>
`;
